# minimal-cpp-template

./: .gitignore  CMakeLists.txt  Makefile  README.md  package.xml
test/: CMakeLists.txt  test.cpp
