<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>"project-name"</name>
  <version>0.1.0</version>
  <description>Write descriptions.</description>
  <maintainer email="timetraveler930@gmail.com">timetravelCat</maintainer>
  <license>Unlicense</license>

  <depend>rclcpp</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>